--- a/Frontend/vite-project/src/Pages/Attendance/Attendance.css
+++ b/Frontend/vite-project/src/Pages/Attendance/Attendance.css
@@ -8,7 +8,7 @@ body{
     height: auto;
     width: 500px;
     margin: auto;
-    margin-top: 100px;
+    margin-top: 50px;
     border-radius: 10px;
     padding: 30px;
     box-sizing: border-box;
@@ -46,8 +46,13 @@ body{
     cursor: pointer;
     border: none;
     border-radius: 5px;
-    
 }
+
+.att-btn:hover{
+    background-color: rgb(150, 150, 245);
+    color: white;
+}
+
 .attt-btn {
     padding: 10px 20px;
     margin-top: 15px;
